
* Sun Jun 08 07:59:37 2003, pabs <pabs@pablotron.org>
  * raggle: combined item_focus and hilite_auto_select into focus
  * raggle: sane keyboard configuration

* Sun Jun 08 08:04:46 2003, pabs <pabs@pablotron.org>
  * raggle: added brief documentation to each method

* Sun Jun 08 08:11:42 2003, pabs <pabs@pablotron.org>
  * raggle: slightly improved window refreshing

* Sun Jun 08 18:19:32 2003, pabs <pabs@pablotron.org>
  * raggle: added preliminary online documentation as a pseudo-feed
  * added rss_grab.rb

* Sun Jun 08 18:21:41 2003, pabs <pabs@pablotron.org>
  * rss_grab.rb: oops

* Sun Jun 08 18:45:57 2003, pabs <pabs@pablotron.org>
  * raggle: added feed-grabbing thread
  * raggle: switched to select() with timeout so Ncurses::getch
    doesn't block ruby threads
  * raggle: added $config['feeds'] ("live" feeds)

* Sun Jun 08 18:58:51 2003, pabs <pabs@pablotron.org>
  * raggle: added feed cache (uses YAML)
  * raggle: loads and saves from feed cache

* Sun Jun 08 20:04:43 2003, pabs <pabs@pablotron.org>
  * raggle: added YAML dependency (for feed cache)
  * raggle: added expand_config() (primitive macro expansion)
  * raggle: $config['{feed_cache,config}_path'] are now derived from
    $config['config_dir']
  * raggle: added '{load,save}_feed_cache' options
  * raggle: added 'input_select_timeout' option
  * raggle: added 'updated' field to feed hash
  * raggle: added 'read?' field to feed hash
  * raggle: added Alternet feed (pardon my political bias)
  * raggle: don't crash on empty feeds any more
  * raggle: slightly more informative comments
  * raggle: feed title now includes number of unread items

* Sun Jun 08 20:56:41 2003, pabs <pabs@pablotron.org>
  * raggle: added additional online documentation
  * raggle: reenabled save_feed_cache (oops)
  * raggle: added 'site' option

* Sun Jun 08 22:11:35 2003, pabs <pabs@pablotron.org>
  * README: added brief introduction, requirements, etc
  * added AUTHORS