@@ -1,0 +1,9 @@
+Raggle TODO
+===========
+* scrolling
+* sanitize window modes (remove text reflow from draw())
+* clean up code (move methods to modules, eliminate globals, etc)
+* modularize code to make it suitable for reuse
+* finish inline documentation
+* command-line options
+* feed grab save existing items
